--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+.container {
+  background: linear-gradient(to right, #0062e6, #33aeff);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+  gap: 10px;
+  justify-items: center;
+}
+.card {
+  margin: 60px 0px;
+  border-radius: 15px;
+  width: 28rem;
+  background-color: whitesmoke;
+}
+.card:hover{
+  transform: scale(1.02);
+
+  cursor: pointer;
+}
+.cardHead {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cardPrice{
+  padding:20px 0px;
+}
+.free {
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+.plus {
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+.pro {
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+.button {
+text-align: center;
+padding:20px 0px;
+}
+.duration {
+  font-size: 15px;
+}
+hr {
+  width:90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
+li{
+  padding:5px;
 }
