--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,21 @@
   margin: 0;
   padding: 0;
 }
-.container {
+body{
   background: linear-gradient(to right, #0062e6, #33aeff);
+}
+.container {
+  
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
   gap: 10px;
   justify-items: center;
+  width:100%;
 }
 .card {
   margin: 60px 0px;
   border-radius: 15px;
-  width: 28rem;
+  width: 25rem;
   background-color: whitesmoke;
 }
 .card:hover{
